--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Lab Express Basic Authentication</title>
-    <link rel='stylesheet' href='/styles/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+
+<head>
+  <title>Lab Express Basic Authentication</title>
+  <link rel='stylesheet' href='/styles/style.css' />
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="/authentication/sign-up">Sign Up</a></li>
+      <li><a href="/authentication/sign-in">Sign In</a></li>
+    </ul>
+  </nav>
+  {{{body}}}
+</body>
+
 </html>
